[package]
name = "can-dbg"
version = "0.1.3"
edition = "2021"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "can-dbg"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
can-types = { git = "https://github.com/natkeo559/can-types" }
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
nom = "7.1.3"
polars = "0.41.0"
serde = "1.0.203"
serde_json = "1.0.117"
